--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans');
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans');
 
 html, body {
   margin: 0;
-}
+} */
